# windows-file-scan

./: LICENSE  README.md  dddd.py  main.py  pyproject.toml  size_by_folder.csv
