[tool.poetry]
name = "windows-file-scan"
version = "0.1.0"
description = ""
authors = ["Denys Nunes <denys.nunes.gonzaga@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
progress = "^1.6"
pandas = "^1.3.4"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
